--- a/public/test.html
+++ b/public/test.html
@@ -33,11 +33,13 @@
 </head>
 <body>
   <h2>匿名时间轴编辑器（只读预览）</h2>
+  <!-- 功能按钮 -->
   <button onclick="openAddEventForm()">➕ 增加事件</button>
   <button onclick="openFilterWindow('and')">🔍 过滤标准</button>
   <div id="timeline"></div>
 
-    <div id="event-form">
+  <!-- 新增事件表单 -->
+  <div id="event-form">
     <h3>新增事件</h3>
     <label>事件名称（必填）：<input type="text" id="title"></label><br>
     <label>事件类型（必填）：<select id="eventType"></select></label><br>
@@ -54,6 +56,7 @@
     <button onclick="document.getElementById('event-form').style.display='none'">关闭</button>
   </div>
 
+  <!-- 过滤逻辑设置弹窗 -->
   <div id="filter-window">
     <h3>过滤标准（和逻辑）</h3>
     <button onclick="openAddFilter()">增加过滤标准</button>
@@ -64,6 +67,7 @@
     <div id="current-filters"></div>
   </div>
 
+  <!-- 添加过滤标准弹窗 -->
   <div id="add-filter-window">
     <h3>新增过滤标准</h3>
     <label>过滤属性：<select id="filter-attribute"></select></label><br>
@@ -74,8 +78,10 @@
 
 <script>
 const ENDPOINT = "https://script.google.com/macros/s/AKfycbxcv6GqP5USv3zOn2pepoT3mke2fdZuWsoInq6qkDx-2LUMBQTcJpahOtRqUHqBYMjs/exec";
+
 let allOptions = {}, activeFilters = {}, filterOptionsChoices, filterLogic = 'and';
 let originalItems = [], timeline = null;
+
 const attributeLabels = {
   EventType: "事件类型",
   Region: "地区",
@@ -127,7 +133,7 @@ function openAddFilter() {
   });
   attrSel.onchange = () => {
     const key = attrSel.value;
-    let opts = key === "ConsolePlatform" && allOptions.ConsolePlatformFilter ? allOptions.ConsolePlatformFilter : allOptions[key] || [];
+    const opts = allOptions[key] || [];
     const sel = document.getElementById("filter-options");
     sel.innerHTML = '';
     opts.forEach(opt => {
@@ -136,7 +142,7 @@ function openAddFilter() {
       sel.appendChild(o);
     });
     if (filterOptionsChoices) filterOptionsChoices.destroy();
-    filterOptionsChoices = new Choices(sel, { removeItemButton: true });
+    filterOptionsChoices = new Choices(sel, { removeItemButton: true, shouldSort: false });
   };
   attrSel.dispatchEvent(new Event("change"));
 }
@@ -151,40 +157,72 @@ function confirmAddFilter() {
   document.getElementById("add-filter-window").style.display = 'none';
 }
 
+/* -------- 通用过滤判断（支持 6 个属性） -------- */
+function valueInSelected(val, selectedArr) {
+  if (val == null) return false;
+  const vArr = Array.isArray(val) ? val : [val];
+  return vArr.some(v => selectedArr.includes(String(v)));
+}
 function passesAndLogicFilters(item, filters) {
-  return Object.entries(filters).every(([key, values]) => values.includes(item[key]));
+  return Object.entries(filters).every(([key, values]) => valueInSelected(item[key], values));
 }
-
 function passesOrLogicFilters(item, filters) {
-  return Object.entries(filters).some(([key, values]) => values.includes(item[key]));
+  return Object.entries(filters).some(([key, values]) => valueInSelected(item[key], values));
 }
-
 function updateTimelineByFilter() {
   if (!timeline || !originalItems) return;
-  const filtered = originalItems.filter(item => {
-    return filterLogic === 'and'
-      ? passesAndLogicFilters(item, activeFilters)
-      : passesOrLogicFilters(item, activeFilters);
-  });
+  const hasFilters = Object.keys(activeFilters).length > 0;
+  const filtered = hasFilters
+    ? originalItems.filter(item => (filterLogic === 'and'
+        ? passesAndLogicFilters(item, activeFilters)
+        : passesOrLogicFilters(item, activeFilters)))
+    : originalItems;
   timeline.setItems(filtered);
 }
+function applyFilters() { filterLogic = 'and'; updateTimelineByFilter(); }
+function applyFiltersOr() { filterLogic = 'or'; updateTimelineByFilter(); }
 
+/* -------- 获取事件并渲染（关键替换区） -------- */
 fetch(ENDPOINT)
   .then(res => res.json())
   .then(data => {
- originalItems = data.map((event, i) => ({
+    originalItems = data.map((event, i) => {
+      // 统一字段（兼容大小写）
+      const Title  = event.Title  ?? event.title  ?? event.content ?? '(无标题)';
+      const Start  = event.Start  ?? event.start;
+      const End    = event.End    ?? event.end;
+      const EventType = event.EventType ?? event.eventType ?? '';
+      const Region    = event.Region    ?? event.region    ?? '';
+      const Platform  = event.Platform  ?? event.platform  ?? '';
+      const Company   = event.Company   ?? event.company   ?? '';
+      const Status    = event.Status    ?? event.status    ?? '';
+      const ConsolePlatform = event.ConsolePlatform ?? event.consolePlatform ?? '';
+
+      const tooltipHtml = [
+        `事件名称：${Title}`,
+        `事件类型：${EventType}`,
+        `时间：${Start || ''}${End ? ' ~ ' + End : ''}`,
+        `状态：${Status}`,
+        `地区：${Region}`,
+        `平台类型：${Platform}`,
+        `主机类型：${ConsolePlatform}`,
+        `公司：${Company}`
+      ].join('<br>');
+
+      return {
         id: event.id || `auto-${i+1}`,
-        content: event.content || '(无标题)',
-        start: event.start,
-        end: event.end || undefined,
-        title: (event.title || '').replace(/\n/g, '<br>'),
-        EventType: event.EventType || event.eventType,
-        Region: event.Region || event.region,
-        Platform: event.Platform || event.platform,
-        Company: event.Company || event.company,
-        Status: event.Status || event.status,
-        ConsolePlatform: event.ConsolePlatform || event.consolePlatform
-    }));
+        content: Title,                 // 时间轴卡片只显示标题
+        start: Start,
+        end: End || undefined,
+        title: tooltipHtml,             // 悬停时显示（支持换行）
+        EventType,
+        Region,
+        Platform,
+        Company,
+        Status,
+        ConsolePlatform
+      };
+    });
 
     timeline = new vis.Timeline(document.getElementById("timeline"), originalItems, {
       locale: "zh-cn",
@@ -197,14 +235,16 @@ fetch(ENDPOINT)
       stack: true
     });
   });
-  fetch(ENDPOINT + '?action=options')
+
+/* -------- 获取下拉选项 -------- */
+fetch(ENDPOINT + '?action=options')
   .then(res => res.json())
   .then(options => {
     allOptions = options;
     const fill = (id, list) => {
       const select = document.getElementById(id);
       select.innerHTML = '';
-      list.forEach(opt => {
+      (list || []).forEach(opt => {
         const o = document.createElement('option');
         o.value = o.textContent = opt;
         select.appendChild(o);
@@ -234,6 +274,7 @@ fetch(ENDPOINT)
       }
     });
 
+    // 初始化“新增过滤标准”的属性下拉
     const attrSel = document.getElementById("filter-attribute");
     attrSel.innerHTML = '';
     Object.keys(attributeLabels).forEach(key => {
@@ -253,11 +294,12 @@ fetch(ENDPOINT)
         sel.appendChild(o);
       });
       if (filterOptionsChoices) filterOptionsChoices.destroy();
-      filterOptionsChoices = new Choices(sel, { removeItemButton: true });
+      filterOptionsChoices = new Choices(sel, { removeItemButton: true, shouldSort: false });
     });
     attrSel.dispatchEvent(new Event("change"));
   });
-  
+
+/* -------- 提交事件 -------- */
 function submitEvent() {
   const tagList = Array.from(document.querySelector('#tag').selectedOptions).map(o => o.value);
   const fd = new FormData();
@@ -281,7 +323,6 @@ function submitEvent() {
     })
     .catch(() => alert("提交失败，请检查网络"));
 }
-
 </script>
 </body>
 </html>
