--- a/public/test.html
+++ b/public/test.html
@@ -214,51 +214,73 @@ fetch(ENDPOINT)
   .then(res => res.json())
   .then(data => {
     originalItems = data.map((event, i) => {
-      // 统一字段（兼容大小写）
-      const Title  = event.Title  ?? event.title  ?? event.content ?? '(无标题)';
-      const Start  = event.Start  ?? event.start;
-      const End    = event.End    ?? event.end;
-      const EventType = event.EventType ?? event.eventType ?? '';
-      const Region    = event.Region    ?? event.region    ?? '';
-      const Platform  = event.Platform  ?? event.platform  ?? '';
-      const Company   = event.Company   ?? event.company   ?? '';
-      const Status    = event.Status    ?? event.status    ?? '';
-      const ConsolePlatform = event.ConsolePlatform ?? event.consolePlatform ?? '';
+  // 1) 简介文本：优先后端的 event.content，其次 Title，最后占位
+  const contentText = event.content ?? event.Title ?? '(无标题)';
 
-      const tooltipHtml = [
-        `事件名称：${Title}`,
-        `事件类型：${EventType}`,
-        `时间：${Start || ''}${End ? ' ~ ' + End : ''}`,
-        `状态：${Status}`,
-        `地区：${Region}`,
-        `平台类型：${Platform}`,
-        `主机类型：${ConsolePlatform}`,
-        `公司：${Company}`
-      ].join('<br>');
+  // 2) 时间
+  const Start = event.Start ?? event.start ?? '';
+  const End   = event.End   ?? event.end   ?? '';
 
-       // ③ 仅对前 3 条逐条打印“统一字段 + tooltip 字符串”
+  // 3) 如果后端提供了整块说明(event.title)，先准备一份纯文本
+  const blob = (event.title ?? '').toString();
+
+  // 4) 小工具：从整块说明中提取“标签：值”
+  const pick = (label) => {
+    if (!blob) return '';
+    const m = new RegExp(label + '：([^\\n]+)').exec(blob);
+    return m ? m[1].trim() : '';
+  };
+
+  // 5) 结构化字段（优先用后端字段；没有就从整块里抽取）
+  const EventType       = event.EventType       ?? event.eventType       ?? pick('事件类型');
+  const Region          = event.Region          ?? event.region          ?? pick('地区');
+  const Platform        = event.Platform        ?? event.platform        ?? pick('平台类型');
+  const Company         = event.Company         ?? event.company         ?? pick('公司');
+  const Status          = event.Status          ?? event.status          ?? pick('状态');
+  const ConsolePlatform = event.ConsolePlatform ?? event.consolePlatform ?? pick('主机类型');
+
+  // 6) 悬停 HTML：若后端已给整块(title)，只做换行；否则按字段拼
+  let tooltipHtml;
+  if (blob) {
+    tooltipHtml = blob.replace(/\n/g, '<br>');
+  } else {
+    tooltipHtml = [
+      `事件名称：${contentText}`,
+      `事件类型：${EventType || ''}`,
+      `时间：${Start || ''}${End ? ' ~ ' + End : ''}`,
+      `状态：${Status || ''}`,
+      `地区：${Region || ''}`,
+      `平台类型：${Platform || ''}`,
+      `主机类型：${ConsolePlatform || ''}`,
+      `公司：${Company || ''}`
+    ].join('<br>');
+  }
+
+  // 7) 调试：前 3 条打印看一下（你也可以保留你之前的 groupCollapsed）
   if (i < 3) {
-    console.groupCollapsed(`🧪DEBUG: 映射中 #${i}`);
+    console.groupCollapsed(`🧪MAP #${i}`);
     console.log('原始 event：', event);
-    console.log('统一后的字段：', { Title, Start, End, EventType, Region, Platform, Company, Status, ConsolePlatform });
-    console.log('tooltipHtml（应包含<br>）：', tooltipHtml);
+    console.log('contentText(简介)：', contentText);
+    console.log('提取字段：', { EventType, Region, Platform, Company, Status, ConsolePlatform });
+    console.log('tooltipHtml：', tooltipHtml);
     console.groupEnd();
   }
-      
-      return {
-        id: event.id || `auto-${i+1}`,
-        content: Title,                 // 时间轴卡片只显示标题
-        start: Start,
-        end: End || undefined,
-        title: tooltipHtml,             // 悬停时显示（支持换行）
-        EventType,
-        Region,
-        Platform,
-        Company,
-        Status,
-        ConsolePlatform
-      };
-    });
+
+  // 8) 返回给 timeline & 过滤
+  return {
+    id: event.id || `auto-${i + 1}`,
+    content: contentText,    // ✅ 简介只显示标题
+    start: Start,            // ✅ 时间轴关键字段
+    end: End || undefined,
+    title: tooltipHtml,      // ✅ 悬停完整说明（含 <br>）
+    EventType,
+    Region,
+    Platform,
+    Company,
+    Status,
+    ConsolePlatform
+  };
+});
 
     // ④ 映射完成后，再打印一个对比总览
 console.groupCollapsed('🧪DEBUG: 映射后条目快照');
