--- a/public/test.html
+++ b/public/test.html
@@ -131,19 +131,19 @@ function openAddFilter() {
     o.textContent = attributeLabels[key];
     attrSel.appendChild(o);
   });
-  attrSel.onchange = () => {
-    const key = attrSel.value;
-    const opts = allOptions[key] || [];
-    const sel = document.getElementById("filter-options");
-    sel.innerHTML = '';
-    opts.forEach(opt => {
-      const o = document.createElement("option");
-      o.value = o.textContent = opt;
-      sel.appendChild(o);
-    });
-    if (filterOptionsChoices) filterOptionsChoices.destroy();
-    filterOptionsChoices = new Choices(sel, { removeItemButton: true, shouldSort: false });
-  };
+attrSel.onchange = () => {
+  const key = attrSel.value;
+  const opts = getFilterOptionsForKey(key);   // ✅ 统一拿到数组
+  const sel = document.getElementById("filter-options");
+  sel.innerHTML = '';
+  opts.forEach(opt => {
+    const o = document.createElement("option");
+    o.value = o.textContent = opt;
+    sel.appendChild(o);
+  });
+  if (filterOptionsChoices) filterOptionsChoices.destroy();
+  filterOptionsChoices = new Choices(sel, { removeItemButton: true, shouldSort: false });
+};
   attrSel.dispatchEvent(new Event("change"));
 }
 
@@ -157,6 +157,40 @@ function confirmAddFilter() {
   document.getElementById("add-filter-window").style.display = 'none';
 }
 
+function normalizeToArray(raw) {
+  if (Array.isArray(raw)) return raw;
+  if (typeof raw === 'string') return [raw];
+  if (raw && typeof raw === 'object') {
+    // 例如 ConsolePlatform 是 { 平台A: [...], 平台B: [...] }
+    try { return Object.values(raw).flat().filter(Boolean); } catch (e) {
+      // .flat 不可用的极端环境：
+      var out = [];
+      Object.keys(raw).forEach(k => {
+        var v = raw[k];
+        if (Array.isArray(v)) out = out.concat(v);
+        else if (v) out.push(v);
+      });
+      return out;
+    }
+  }
+  return [];
+}
+
+// 根据选择的过滤属性，返回对应的候选数组（已归一）
+function getFilterOptionsForKey(key) {
+  if (key === 'ConsolePlatform') {
+    // 优先使用专门的 ConsolePlatformFilter（数组）
+    if (Array.isArray(allOptions.ConsolePlatformFilter)) {
+      return allOptions.ConsolePlatformFilter;
+    }
+    // 兜底：从 ConsolePlatform 映射里把所有主机类型打平为数组
+    if (allOptions.ConsolePlatform) {
+      return normalizeToArray(allOptions.ConsolePlatform);
+    }
+  }
+  return normalizeToArray(allOptions[key]);
+}
+  
 /* -------- 通用过滤判断（支持 6 个属性） -------- */
 function valueInSelected(val, selectedArr) {
   if (val == null) return false;
@@ -352,19 +386,19 @@ fetch(ENDPOINT + '?action=options')
       o.textContent = attributeLabels[key];
       attrSel.appendChild(o);
     });
-    attrSel.addEventListener("change", () => {
-      const key = attrSel.value;
-      const opts = allOptions[key] || [];
-      const sel = document.getElementById("filter-options");
-      sel.innerHTML = '';
-      opts.forEach(opt => {
-        const o = document.createElement("option");
-        o.value = o.textContent = opt;
-        sel.appendChild(o);
-      });
-      if (filterOptionsChoices) filterOptionsChoices.destroy();
-      filterOptionsChoices = new Choices(sel, { removeItemButton: true, shouldSort: false });
-    });
+attrSel.addEventListener("change", () => {
+  const key = attrSel.value;
+  const opts = getFilterOptionsForKey(key);  // ✅ 统一拿到数组
+  const sel = document.getElementById("filter-options");
+  sel.innerHTML = '';
+  opts.forEach(opt => {
+    const o = document.createElement("option");
+    o.value = o.textContent = opt;
+    sel.appendChild(o);
+  });
+  if (filterOptionsChoices) filterOptionsChoices.destroy();
+  filterOptionsChoices = new Choices(sel, { removeItemButton: true, shouldSort: false });
+});
     attrSel.dispatchEvent(new Event("change"));
   });
 
