--- a/public/test.html
+++ b/public/test.html
@@ -21,6 +21,7 @@
 </head>
 <body>
   <h2>时间轴（查看模式）</h2>
+  <button onclick="openFilterWindow('and')">🔍 过滤标准</button>
   <div id="timeline"></div>
 
 <script>
