--- a/public/test.html
+++ b/public/test.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>时间轴（匿名模式）</title>
+  <title>电子游戏时间轴</title>
   <!-- 引入所需样式和库 -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" rel="stylesheet" />
@@ -32,7 +32,7 @@
   </style>
 </head>
 <body>
-  <h2>匿名时间轴编辑器（只读预览）</h2>
+  <h2>电子游戏时间轴</h2>
   <!-- 功能按钮 -->
   <button onclick="openFilterWindow('and')">🔍 过滤标准</button>
   <div id="timeline"></div>
